--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+    @apply font-black uppercase text-6xl font-serif;
+}
+
+header, main {
+    @apply flex flex-col justify-center items-center;
+}
