lots of fixes and form work

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ main {
     @apply flex flex-col justify-center items-center;
 }
 
-label:has(+ input[required]) span::after {
+label:has(+ [required]) span::after {
     content: "*";
     @apply ml-1 text-error;
 }
